# online-cinema

./: docker-compose.yml
backend/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  main.py  model.py  pyproject.toml  requirements.txt
backend/routers/: movies.py  users.py
backend/utils/: connections.py
frontend/: .gitignore  Dockerfile  main.py  package-lock.json  package.json  server.js  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  index.tsx  interfaces.ts  types.ts  utils.ts
frontend/src/api/: movie-api.ts
frontend/src/components/: app-container.tsx  card.tsx  container.tsx  header.tsx  hero-slider.tsx  image.tsx  protected-route.tsx  search-result.tsx  search.tsx  trending-hero.tsx  video-player.tsx
frontend/src/components/Loading/: Loading.module.css  Loading.tsx
frontend/src/components/MovieCard/: MovieCard.module.css  MovieCard.tsx  index.tsx
frontend/src/components/slider/: index.tsx
frontend/src/config/: api.config.ts
frontend/src/constants/: api.ts
frontend/src/contexts/: auth-context.tsx
frontend/src/layouts/: footer.tsx  header.tsx
frontend/src/pages/: admin.tsx  all-movies.tsx  catalog.tsx  film.tsx  home.tsx  login.tsx  not-found.tsx  search-results.tsx
frontend/src/services/: api.service.ts
frontend/src/services/api/: client.ts
frontend/src/types/: api.types.ts  movie.ts  react-slick.d.ts
