[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aioboto3>=14.1.0",
    "aiobotocore>=2.21.1",
    "aiohttp>=3.11.13",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "plotly>=6.0.0",
    "requests>=2.32.3",
]
